package Proyecto;

public class Asociacion {

    public void newLocation(Localizacion l){}
    public void newEvent(Evento e){}
    public void newPersona(Persona p){}
    public void informEvent(Evento e){}
    public void register(Miembro m, Evento e){}
}
