package Proyecto;

public class Conferencia {
    private int max_attendees;

    public Conferencia(int max_attendees) {
        this.max_attendees = max_attendees;
    }
}
