package Proyecto;

public class Localizacion {
    private String description;
    private String address;

    public Localizacion(String description, String address) {
        this.description = description;
        this.address = address;
    }
}
