package Proyecto;

public class Miembro {
    private String email;

    public Miembro(String email) {
        this.email = email;
    }
}
