package Proyecto;

public class MiembroJuntaDirectiva {
}
