package Proyecto;

public class Persona {
    private String name;

    public Persona(String name) {
        this.name = name;
    }
}
