@startuml

class Asociacion {
    + void newLocarion(Localizacion l)
    + void newEvent(Evento e)
    + void newPerson(Persona p)
    + void informEvent(Evento e)
    + void newLocarion(Miembro m, Evento e)
}
class Conferencia {
    - int max_attendees
}
class Evento {
    - LocalDate date
    - String description
    + void assign(Localizacion l)
}
class Localizacion {
    - String description
    - String address
}
class Miembro {
    - String email
}
class MiembroJuntaDirectiva {

}
class Persona {
    - String name
}
class ReunionJuntaDirectiva {

}

Asociacion o-- "0..*" Persona
Persona <|-- Miembro
Persona "0..*" -- "0..*" Conferencia : attendsTo
Miembro <|-- MiembroJuntaDirectiva
Asociacion o-- "0..*" Localizacion
Localizacion "1" -- "0..*" Evento : isLocatedIn
Asociacion o-- "0..*" Evento
Evento <|-- Conferencia
Evento <|-- ReunionJuntaDirectiva
ReunionJuntaDirectiva "0..*" -- "0..*" MiembroJuntaDirectiva : attendsTo
Evento "0..*" -- "0..*" Miembro : attendsTo

@enduml